--- a/config/database.yml
+++ b/config/database.yml
@@ -21,9 +21,11 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+<% if ENV['DATABASE_DEVELOPMENT_URL'] %>
 development:
   <<: *default
-  database: app_development
+  url: <%= ENV['DATABASE_DEVELOPMENT_URL'] %>
+<% end %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -55,9 +57,11 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+<% if ENV['DATABASE_TEST_URL'] %>
 test:
   <<: *default
-  database: app_test
+  url: <%= ENV['DATABASE_TEST_URL'] %>
+<% end %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
